[workspace]
resolver = "2"
members = [
  "contracts/subscription", 
  "contracts/achievement_collection",
  "contracts/achievement_nft",
  "contracts/auction",
  "contracts/bridge",
  "contracts/daily_rewards",
  "contracts/energy",
  "contracts/guild",
  "contracts/leaderboard",
  "contracts/oracle",
  "contracts/puzzle_verification",
  "contracts/referral",
  "contracts/reward_token",
  "contracts/staking",
  "contracts/time_attack",
  "contracts/tournament",
  "contracts/bounty",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
